--- a/baseline/Audit/disallow-host-ports.yaml
+++ b/baseline/Audit/disallow-host-ports.yaml
@@ -36,17 +36,15 @@ spec:
             - kyverno
       validate:
         message: >-
-          "Failed InitContainers={{request.object.spec.initContainers[?ports[] | [?hostPort==`0`]].name || `[]`}}, Failed Containers = {{request.object.spec.containers[?ports[] | [?hostPort==`0`]].name || `[]`}}; Use of host ports is disallowed."
+          "Failed InitContainers={{request.object.spec.initContainers[?ports[] | [?hostPort!=`0`]].name || `[]`}}, Failed Containers = {{request.object.spec.containers[?ports[] | [?hostPort!=`0`]].name || `[]`}}; Use of host ports is disallowed."
         pattern:
           spec:
             =(ephemeralContainers):
               - =(ports):
-                  - =(hostPort): ">0"
+                  - =(hostPort): "0"
             =(initContainers):
               - =(ports):
-                  - =(hostPort): ">0"
+                  - =(hostPort): "0"
             containers:
               - =(ports):
-                  - =(hostPort): ">0"
-
-
+                  - =(hostPort): "0"
