--- a/restricted/Audit/restrict-seccomp-strict.yaml
+++ b/restricted/Audit/restrict-seccomp-strict.yaml
@@ -40,7 +40,7 @@ spec:
             - kyverno
       validate:
         message: >-
-          "Failed InitContainers= {{request.object.spec.initContainers[?!contains(['Localhost','RuntimeDefault'],securityContext.seccompProfile.type)].name || `[]`}}, Failed Containers = {{ request.object.spec.containers[?!contains(['Localhost','RuntimeDefault'],securityContext.seccompProfile.type)].name || `[]`}}, Entire Pod {{request.name}} failed = {{request.object.spec[?!contains(['Localhost','RuntimeDefault'],securityContext.seccompProfile.type)].name || `[]` | length(@)  >  `0`}} Use of custom Seccomp profiles is disallowed."
+          "Failed InitContainers= {{request.object.spec.initContainers[?!contains(['Localhost','RuntimeDefault'],securityContext.seccompProfile.type)].name || `[]`}}, Failed Containers = {{ request.object.spec.containers[?!contains(['Localhost','RuntimeDefault'],securityContext.seccompProfile.type)].name || `[]`}}, Entire Pod {{request.object.metadata.name} failed = {{request.object.spec[?!contains(['Localhost','RuntimeDefault'],securityContext.seccompProfile.type)].name || `[]` | length(@)  >  `0`}} Use of custom Seccomp profiles is disallowed."
         anyPattern:
           - spec:
               securityContext:
