--- a/restricted/Audit/disallow-capabilities-strict.yaml
+++ b/restricted/Audit/disallow-capabilities-strict.yaml
@@ -40,7 +40,7 @@ spec:
             value: DELETE
       validate:
         message: >-
-          "Failed InitContainers= {{request.object.spec.initContainers[?!contains(securityContext.capabilities.drop[] || `[]`, 'ALL')].name || `[]`}}, Failed Containers = {{ request.object.spec.containers[?!contains(securityContext.capabilities.drop[] || `[]`, 'ALL')].name || `[]`}}, Entire Pod {{request.name}} failed = {{request.object.spec[?!contains(securityContext.capabilities.drop[] || `[]`, 'ALL')].name || `[]` | length(@)  >  `0`}} Use of custom Seccomp profiles is disallowed."
+          "Failed InitContainers= {{request.object.spec.initContainers[?!contains(securityContext.capabilities.drop[] || `[]`, 'ALL')].name || `[]`}}, Failed Containers = {{ request.object.spec.containers[?!contains(securityContext.capabilities.drop[] || `[]`, 'ALL')].name || `[]`}}, Entire Pod {{request.object.metadata.name}} failed = {{request.object.spec[?!contains(securityContext.capabilities.drop[] || `[]`, 'ALL')].name || `[]` | length(@)  >  `0`}} Use of custom Seccomp profiles is disallowed."
         foreach:
           - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
             deny:
